Update TeleportCancelCommand.java